<resources>
    <string name="app_name">轻番茄</string>
    <!-- menu -->
    <string name="nav_setting">设置</string>
    <string name="nav_schedule">记录</string>
    <string name="nav_info">关于</string>
    <string name="nav_exit">退出</string>
    <!-- button -->
    <string name="btn_start">开始</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_resume">继续</string>
    <string name="btn_stop">放弃</string>
    <string name="btn_skip">略过</string>

    <string name="scene_title_work">开始工作</string>
    <string name="scene_title_break">开始休息</string>

    <string name="scene_work">工作</string>
    <string name="scene_short_break">短时休息</string>
    <string name="scene_long_break">长时休息</string>

    <string name="amount_durations">番茄总时间 %1$d 分钟</string>
    <string name="stage_time_unit">%1$d 分钟</string>
    <string name="time_unit">分钟</string>

    <!-- 通知 -->
    <string name="notification_focus">番茄工作中</string>
    <string name="notification_focus_pause">番茄暂停中</string>
    <string name="notification_break">正在休息</string>
    <string name="notification_break_pause">休息暂停中</string>
    <string name="notification_time_left">还剩</string>
    <string name="notification_finish">放下工作，准备休息</string>
    <string name="notification_finish_content">已经完成一个番茄钟，休息一下吧！</string>
    <string name="notification_break_finish">休息结束</string>
    <string name="notification_break_finish_content">休息结束，开启下一个番茄钟吧！</string>

    <!-- 设置 -->
    <string name="pref_title_tick_title">定时器设置</string>
    <string name="pref_title_work_length">工作时长</string>
    <string name="pref_title_short_break">休息时长</string>
    <string name="pref_title_long_break">长休息时长</string>
    <string name="pref_title_long_break_frequency">长休息间隔</string>
    <string name="pref_title_frequency_value">%1$d 个番茄</string>
    <string name="pref_title_time_value">%1$d 分钟</string>

    <string name="pref_title_pomodoro_element">番茄元素</string>
    <string name="pref_title_pomodoro_mode">番茄模式</string>
    <string name="pref_title_pomodoro_mode_summary">在番茄模式下不能暂停定时器</string>
    <string name="pref_title_infinity_mode">自动模式</string>
    <string name="pref_title_infinity_mode_summary">自动开始下一个番茄钟</string>
    <string name="pref_title_ticking_sound">滴答声</string>
    <string name="pref_title_ticking_sound_summary">在番茄钟工作期间，持续的滴答声</string>

    <string name="pref_title_notifications">提示</string>
    <string name="pref_title_use_notification">完成后提示</string>
    <string name="pref_title_notification_sound">提示音</string>
    <string name="pref_title_notification_vibrate">震动</string>

    <string name="pref_title_advanced">高级</string>
    <string name="pref_title_screen_on">屏幕常亮</string>
    <string name="pref_title_screen_on_summary">仅针对主界面，在番茄钟期间保持屏幕常亮</string>
    <string name="pref_title_check_update">检查更新</string>
    <string name="check_update_connected_failed">无法连接网络</string>
    <string name="check_update_connected_error">网络连接异常，请稍后再试</string>
    <string name="check_update_checking">正在检查更新</string>
    <string name="check_update_new_version">发现新版本</string>
    <string name="check_update_last_version">已经是最新版本</string>
    <string name="check_update_message">版本号: %1$s\n\n版本说明:\n%2$s</string>
    <string name="check_update_update_now">立即更新</string>
    <string name="check_update_update_later">稍后更新</string>
    <string name="check_update_mobile_network">
        "当前处于移动网络环境下，"
        "继续使用可能产生流量，请确认是否继续？"
    </string>
    <string name="check_update_get_info_failed">获取版本信息失败，请重试</string>

    <string name="schedule_today_title">今日数据</string>
    <string name="schedule_amount_title">累计数据</string>
    <string name="schedule_durations">番茄时间</string>
    <string name="schedule_times">番茄次数</string>
    <string name="schedule_done">完成次数</string>
    <string name="schedule_amount_summary">注意：卸载应用，累计数据将重新计算!</string>

    <string name="info_version">%1$s v%2$s</string>
    <string name="info_description">
        基于开源项目进一步开发
        添加了数据可视化，大幅修改了前端界面
        优化了一些问题
    </string>
    <string name="info_about_title">关于</string>
    <string name="info_contact_us">相关作者</string>
    <string name="info_email_title">原始项目</string>
    <string name="info_email">https://github.com/icodechef/Tick</string>
    <string name="info_github_title">合作者</string>
    <string name="info_github">PublicCo
wukef2425
    </string>
    <string name="info_website_title">网站</string>
    <string name="info_site">http://tick.icodechef.com/</string>

    <string name="toast_tick_sound_on">滴答声已开启</string>
    <string name="toast_tick_sound_off">滴答声已关闭</string>
    <string name="navigation_drawer_open">打开导航栏</string>
    <string name="navigation_drawer_close">关闭导航栏</string>

    <!--myDebug-->
    <string name="Loginfo">MyDebugInfo</string>
    <string name="pie_chart">test_piechart</string>
    <string name="home_data_menu">test_datadraw</string>
    <string name="cal_amount">累计次数</string>
    <string name="cla_focus_amount">累计专注次数</string>
    <string name="Line_chart">年度数据</string>
    <string name="text_show_iat_result">你的命令</string>
    <string-array name="iat_language_entries">
        <item>中文</item>
        <item>英语</item>
        <item>日语</item>
        <item>俄语</item>
        <item>西班牙语</item>
        <item>法语</item>
        <item>韩语</item>
    </string-array>
    <string-array name="iat_language_value">
        <item>zh_cn</item>
        <item>en_us</item>
        <item>ja_jp</item>
        <item>ru-ru</item>
        <item>es_es</item>
        <item>fr_fr</item>
        <item>ko_kr</item>
    </string-array>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="text_begin">请开始说话</string>
    <string name="text_upload_success">上传成功</string>
</resources>
