<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_setting"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/nav_schedule"/>
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/nav_info"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_exit"/>
    </group>
</menu>
