<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.icodechef.android.tick.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/stage_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/stage_work_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/scene_work"
                    android:src="@drawable/stage_work" />

                <TextView
                    android:id="@+id/stage_work_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/stage_work_image"
                    android:layout_alignLeft="@id/stage_work_image"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="35dp"
                    android:textSize="36sp"
                    android:textColor="@color/colorBackground" />

                <TextView
                    android:id="@+id/current_pomodoro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/stage_work_image"
                    android:layout_alignLeft="@id/stage_work_image"
                    android:layout_marginLeft="315dp"
                    android:layout_marginTop="68dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="#495ECA" />

                <TextView
                    android:id="@+id/total_pomodoro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/stage_work_image"
                    android:layout_alignLeft="@id/stage_work_image"
                    android:layout_marginLeft="334dp"
                    android:layout_marginTop="68dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="#495ECA" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stage_short_break"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/stage_short_break_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/scene_short_break"
                    android:src="@drawable/stage_short_break" />

                <TextView
                    android:id="@+id/stage_short_break_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/stage_short_break_image"
                    android:layout_alignLeft="@id/stage_short_break_image"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="35dp"
                    android:textSize="36sp"
                    android:textColor="@color/colorBackground" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stage_long_break"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/stage_long_break_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/scene_long_break"
                    android:src="@drawable/stage_long_break" />

                <TextView
                    android:id="@+id/stage_long_break_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/stage_long_break_image"
                    android:layout_alignLeft="@id/stage_long_break_image"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="35dp"
                    android:textSize="36sp"
                    android:textColor="@color/colorBackground" />

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <com.icodechef.android.tick.widget.RippleWrapper
                android:id="@+id/ripple_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerInParent="true"
                app:rippleColor="@color/colorRipple"
                app:rippleDuration="2000"
                app:rippleDelay="1000"
                app:rippleAmount="2">

                <com.icodechef.android.tick.widget.TickProgressBar
                    android:id="@+id/tick_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.icodechef.android.tick.widget.RippleWrapper>


            <TextView
                android:id="@+id/text_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="30sp"
                android:textColor="#070707"/>

            <TextView
                android:id="@+id/text_count_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="50sp"
                android:textStyle="normal"
                android:textColor="#070707"/>

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.24">

            <LinearLayout
                android:id="@+id/buttons"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:textColor="@color/colorText"
                    android:textSize="17sp"
                    android:textStyle="normal"
                    android:visibility="visible"
                    android:text="@string/btn_start"
                    />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bad_button_bg"
                    android:textColor="@color/colorTextLight"
                    android:textSize="17sp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    android:text="@string/btn_pause"/>

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn_resume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:textColor="@color/colorText"
                    android:textSize="17sp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    android:text="@string/btn_resume"/>

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bad_button_bg"
                    android:textColor="@color/colorTextLight"
                    android:textSize="17sp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    android:text="@string/btn_stop"/>

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bad_button_bg"
                    android:textColor="@color/colorTextLight"
                    android:textSize="17sp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    android:text="@string/btn_skip"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:alpha="0.8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_alarm_on_white_24dp"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/amount_durations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
